reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__sleep.rs_line_385_col_5_001.log

*** crates/tracewake-core/src/actions/defs/sleep.rs:385:5: replace sleep_need_events -> Result<Vec<EventEnvelope>, ApplyError> with Ok(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/sleep.rs
+++ replace sleep_need_events -> Result<Vec<EventEnvelope>, ApplyError> with Ok(vec![Default::default()])
@@ -377,64 +377,17 @@
     sleep_started_event: &EventEnvelope,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     tick: SimTick,
     need_kind: NeedKind,
     delta: i32,
     elapsed_ticks: u64,
 ) -> Result<Vec<EventEnvelope>, ApplyError> {
-    let actor_id = sleep_started_event
-        .actor_id
-        .clone()
-        .ok_or_else(|| ApplyError::BadPayload {
-            key: "actor_id",
-            value: "missing".to_string(),
-        })?;
-    let current = agent_state
-        .needs_by_actor
-        .get(&actor_id)
-        .and_then(|needs| needs.get(&need_kind))
-        .map(crate::agent::NeedState::value);
-    Ok(build_need_delta_and_threshold_events(
-        NeedDeltaEventSpec {
-            event_id: EventId::new(format!(
-                "event.sleep_need_delta.{}.{}",
-                need_kind.stable_id(),
-                sleep_started_event.event_id.as_str()
-            ))
-            .unwrap(),
-            threshold_event_id: EventId::new(format!(
-                "event.sleep_need_threshold.{}.{}",
-                need_kind.stable_id(),
-                sleep_started_event.event_id.as_str()
-            ))
-            .unwrap(),
-            tick,
-            ordering_key: ordering_key.clone(),
-            content_manifest_id: content_manifest_id.clone(),
-            causes: vec![EventCause::Event(sleep_started_event.event_id.clone())],
-            actor_id: actor_id.clone(),
-            proposal_id: sleep_started_event.proposal_id.clone(),
-            process_id: None,
-            participants: vec![actor_id.to_string()],
-            need_kind,
-            delta,
-            elapsed_ticks,
-            cause_kind: "action_effect".to_string(),
-            cause_action_id: Some("sleep".to_string()),
-            extra_payload: Vec::new(),
-            delta_effects_summary: format!("{} delta from elapsed sleep", need_kind.stable_id()),
-            threshold_effects_summary: format!(
-                "{} crossed threshold during sleep",
-                need_kind.stable_id()
-            ),
-        },
-        current,
-    ))
+    Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_duration_ticks(proposal: &Proposal) -> Result<Option<u64>, ActionRejection> {
     let duration_ticks = proposal
         .parameters
         .get("duration_ticks")
         .map(|value| value.parse::<u64>())
         .transpose()


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/sleep.rs` has changed (1781911623.583924286s, 4s after last build at 1781911619.175924263s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `NeedDeltaEventSpec` and `build_need_delta_and_threshold_events`
 --> crates/tracewake-core/src/actions/defs/sleep.rs:2:5
  |
2 |     build_need_delta_and_threshold_events, NeedDeltaEventSpec,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:385:13
    |
385 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:385:13
    |
385 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
